Update Image & Collaterals 2.6

--- a/index.html
+++ b/index.html
@@ -50,13 +50,12 @@
     transform: translate(-50%);
     border-radius: 5px;
     background-color: #14161b;
-    height: 450px;
+    height: 550px;
     overflow: hidden;
     margin-top: 20px;
   }
   .swiper-container img {
     cursor: pointer;
-
   }
   .swiper-slide {
     background: transparent;
@@ -368,7 +367,11 @@
         <div class="product" id="event" data-name="event">
           <div class="swiper-container">
             <div class="swiper-wrapper">
-              <img class="swiper-slide" src="/img/TEASER_DP.png" />
+              <img class="swiper-slide" src="/img/Events/Special.jpg" />
+              <img class="swiper-slide" src="/img/Events/Image 1.jpg" />
+              <img class="swiper-slide" src="/img/Events/Image 2.jpg" />
+              <img class="swiper-slide" src="/img/Events/Image 3.jpg" />
+              <img class="swiper-slide" src="/img/Events/Image 4.jpg" />
               <!-- <img class="swiper-slide" src="/img/slide2.jpg" />
               <img class="swiper-slide" src="/img/slide3.jpg" />
               <img class="swiper-slide" src="/img/slide4.jpg" />
