Button added for registration

--- a/index.html
+++ b/index.html
@@ -144,6 +144,9 @@
     <!-- Header Design start -->
     <header class="header">
       <a href="#home" class="logo">Sneaky Events Team</a>
+      <div class="click-product">
+        <a class="Click-me" href="#products">Registration Available!<br>Click here!</a>
+      </div>
       <i class="bx bx-menu" id="menu-icon"></i>
 
       <nav class="navbar">
@@ -154,9 +157,12 @@
         <a href="#faq">FAQ</a>
         <a href="#contactUs">Contact Us</a>
       </nav>
+
     </header>
+
+    
+
     <div id="loader-3">
-      
       <p>Your data is processing.<img src="/img/SETLOGOSILVER.png" /><span class="loader-spin-3"></span></p>
     </div>
       <!-- Header Design end -->
