--- a/index.html
+++ b/index.html
@@ -376,6 +376,9 @@
               <img class="swiper-slide" src="/img/Events/Image 1.jpg" />
               <img class="swiper-slide" src="/img/Events/Image 2.jpg" />
               <img class="swiper-slide" src="/img/Events/Image 4.jpg" />
+              <img class="swiper-slide" src="/img/Events/Image 1.jpg" />
+              <img class="swiper-slide" src="/img/Events/Image 2.jpg" />
+              <img class="swiper-slide" src="/img/Events/Image 4.jpg" />
               <!-- <img class="swiper-slide" src="/img/slide2.jpg" />
               <img class="swiper-slide" src="/img/slide3.jpg" />
               <img class="swiper-slide" src="/img/slide4.jpg" />
