--- a/p/s/admin.html
+++ b/p/s/admin.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin S.E.T</title>
+  <link rel="android-chrome" sizes="192x192" href="/img/favicon/android-chrome-192x192.png">
+  <link rel="android-chrome" sizes="512x512" href="/img/favicon/android-chrome-512x512.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-32x32.png">
+  <link rel="manifest" href="/img/favicon/site.webmanifest">
   <link rel="stylesheet" href="/p/s/s/assets/css/style.css">
   <link rel="stylesheet" href="/p/s/s/assets/css/drawer.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
