--- a/index.html
+++ b/index.html
@@ -543,37 +543,21 @@
           <div class="product hidden" id="registration" data-name="registration">
             <div id="registration-container">
               <div id="registration-details">
-                <h1>Join the Sneaky Rivals: MLBB Online Tournament Season 1!</h1>
+                <h1>Join the Sneaky Valorant 3v3!</h1>
                 <h1>REGISTER NOW❗️❗️❗️</h1>
-                <p>Registration Fee: 75 Pesos per member (5-8 players per team)</p>
-                <p>Prize Pool: Php 50,000 cash + product loot bags from sponsors + E-Certification.</p>
+                <p>Get ready to battle it out! 🎮 Join the 𝐀𝐏𝐂 𝐆𝐚𝐦𝐢𝐧𝐠 𝐔𝐏𝐒 𝐕𝐚𝐥𝐨𝐫𝐚𝐧𝐭 𝐓𝐨𝐮𝐫𝐧𝐚𝐦𝐞𝐧𝐭 on 𝐒𝐞𝐩𝐭𝐞𝐦𝐛𝐞𝐫 𝟐𝟏, 𝟐𝟎𝟐𝟒 at 𝐒𝐌 𝐌𝐚𝐥𝐥 𝐨𝐟 𝐀𝐬𝐢𝐚. A whole day of epic matches awaits, organized by 𝐒𝐧𝐞𝐚𝐤𝐲 𝐄𝐯𝐞𝐧𝐭𝐬 𝐓𝐞𝐚𝐦.</p>
+                <br>
+                <p>Collegiate and amateur teams are encouraged to join! See you there, agents! </p>
                 <br>
 
-                <p>Prizes:
-                  <br>
-                  - Champion: 20,000
-                  <br>
-                  - 2nd Runner-Up: 10,000 
-                  <br>
-                  - 3rd Runner-Up: 5,000 
-                  <br>
-                  - MVP Finals: 5,000 
-                  <br>
-                  - Top 8: 2,000 
-                </p>
+                <p>Register your team NOW!</p>
                 <br>
 
                 <p>How to Register:</p>
                 <p>1. Visit: <a href="https://sneakyeventsteam.com/#products">[www.sneakyeventsteam.com/#products]</a></p>
-                <p>2. Select: "MLBB Registration" under "Products"</p>
+                <p>2. Select: "Games you want to register" under "Products"</p>
                 <p>3. Complete the form</p>
-                <p>4. Send payment to Gcash: 09951902785 (JO*****N B)</p>
-                <p>5. Message or email proof of payment</p>
-                <br>
-                <p>Presented by Sneaky Events Team</p>
-                <p>Sponsored by: TTRacing, Pro-Graphics Printing Station, Black Mamba Energy Drink, Wira Pineapple, Cuzco Kola, Hunt's, Culture Blends, Tanduay Ice, Listerine, Bactidol, Surf Philippines.</p>
-                <br />
-                <h2>Confirmation</h2>
+                
                 <p><b>To confirm and verify your slot, please message our Facebook page and send the screenshot of the submitted form. </b></p>
                 <p>Facebook Page : <a href="https://www.facebook.com/SneakyEventsTeam">https://www.facebook.com/SneakyEventsTeam</a></p>
                 <p>Discord Server : <a href="https://discord.gg/k6Xss3D9JS">https://discord.gg/k6Xss3D9JS</a></p>
