Valorant option disabled

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
           <span class="item-link-3" id="item-link" data-target="registration">Registration
             <select class="item-link-4" id="item-link-select" data-target="registration1">
               <option value=" ">Select</option>
-              <option value="valorant">VALORANT</option>
+              <option value="valorant" disabled>VALORANT</option>
               <option value="mlbb">MLBB</option>
             </select>
           </span>
