Download Button added

--- a/p/s/players.html
+++ b/p/s/players.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="/p/s/s/assets/css/style.css">
   <link rel="stylesheet" href="/p/s/s/assets/css/drawer.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 
   <!--  Plugins  -->
 
@@ -41,6 +42,7 @@
         <h2>Mlbb Registration Table</h2>
         <div class="loading" id="loading" style="display: none;">Loading data...</div>
         <button id="delete-selected">Delete</button>
+        <button id="download-excel" class="btn btn-primary">Download Mlbb Masterlist</button>
           <table>
             <thead>
               <tr>
@@ -106,6 +108,7 @@
         <h2>Valorant Registration Table</h2>
         <div class="loading" id="loading" style="display: none;">Loading data...</div>
         <button id="vdelete-selected">Delete</button>
+        <button id="download-valorant-excel" class="btn btn-primary">Download Valorant Masterlist</button>
           <table>
             <thead>
               <tr>
