--- a/admin.html
+++ b/admin.html
@@ -19,7 +19,7 @@
             // Check if the user has entered "/admin"
             if (currentPath === "/admin.html") {
                 // Redirect to admin.html
-                window.location.href = "/p/s/admin.html";
+                window.location.href = "/p/s/login.html";
             }
         };
     </script>
