--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     />
 
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="a93694c2-f46a-42cb-8ee1-ddc9554734c7" data-blockingmode="auto" type="text/javascript"></script>
 </head>
 
 <style>
