--- a/p/s/reg/hokreg.html
+++ b/p/s/reg/hokreg.html
@@ -11,88 +11,105 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-32x32.png">
   <link rel="manifest" href="/img/favicon/site.webmanifest">
   <link rel="stylesheet" href="/p/s/s/assets/css/style.css">
+  <link rel="stylesheet" href="/p/s/s/assets/css/hok.css">
 </head>
 <body>
-  <h2>Team Registration</h2>
-  <form method="POST" name="reg-form-hok" enctype="multipart/form-data">
-    <div class="reg-data-hok" id="reg-data-hok">
-      <!-- Team Information -->
-      <label for="hok-Email">Email</label>
-      <input type="email" name="hok-Email" required><br />
-
-      <label for="hok-Team Name">Team Name</label>
-      <input type="text" name="hok-Team Name" required><br />
-
-      <label for="hok-Squad-ID">Squad ID</label>
-      <input type="text" name="hok-Squad-ID" required><br />
-
-      <label for="hok-Captain Name">Captain Name</label>
-      <input type="text" name="hok-Captain Name" required><br />
-
-      <label for="hok-Captain FB Link">Captain Fb Link</label>
-      <input type="text" name="hok-Captain FB Link" required><br />
-
-      <label for="hok-Captain-id">Captain ID</label>
-      <input type="text" name="hok-Captain-id" required><br />
-      <h3>Players</h3>
-    <!-- Player 1 Information -->
-      <label for="hok-Player1IGN">Player 1 IGN</label>
-      <input type="text" name="hok-Player1IGN" required><br />
-
-      <label for="hok-Player1ID">Player 1 ID</label>
-      <input type="text" name="hok-Player1ID" required><br />
-
-      <label for="hok-Player1FBLink">Player 1 Fb Link</label>
-      <input type="text" name="hok-Player1FBLink" required><br />
-
-      
-      <!-- Player 2 Information -->
-      <label for="hok-Player2IGN">Player 2 IGN</label>
-      <input type="text" name="hok-Player2IGN" required><br />
-
-      <label for="hok-Player2ID">Player 2 ID</label>
-      <input type="text" name="hok-Player2ID" required><br />
-
-      <label for="hok-Player2FBLink">Player 2 Fb Link</label>
-      <input type="text" name="hok-Player2FBLink" required><br />
-
-
-      <!-- Player 3 Information -->
-      <label for="hok-Player3IGN">Player 3 IGN</label>
-      <input type="text" name="hok-Player3IGN" required><br />
-
-      <label for="hok-Player3ID">Player 3 ID</label>
-      <input type="text" name="hok-Player3ID" required><br />
-
-      <label for="hok-Player3FBLink">Player 3 Fb Link</label>
-      <input type="text" name="hok-Player3FBLink" required><br />
-
-
-      <!-- Player 4 Information -->
-      <label for="hok-Player4IGN">Player 4 IGN</label>
-      <input type="text" name="hok-Player4IGN" required><br />
-
-      <label for="hok-Player4ID">Player 4 ID</label>
-      <input type="text" name="hok-Player4ID" required><br />
-
-      <label for="hok-Player4FBLink">Player 4 Fb Link</label>
-      <input type="text" name="hok-Player4FBLink" required><br />
-
-
-      <!-- Player 5 Information -->
-      <label for="hok-Player5IGN">Player 5 IGN</label>
-      <input type="text" name="hok-Player5IGN" required><br />
-
-      <label for="hok-Player5ID">Player 5 ID</label>
-      <input type="text" name="hok-Player5ID" required><br />
-
-      <label for="hok-Player5FBLink">Player 5 Fb Link</label>
-      <input type="text" name="hok-Player5FBLink" required><br />
-
-
-      <button id="submitbtnhok" type="submit">Submit</button>
+  <div class="pageTitle">
+    <h2>Honor Of Kings Registration</h2>
+  </div>
+  <div class="formBody">
+    <form method="POST" name="reg-form-hok" enctype="multipart/form-data">
+      <div class="container">
+        <div class="pageForm-wrapper">
+            <div class="pageForm">
+                <h2>H.O.K</h2>
+            </div>
+        </div>
     </div>
-  </form>
+      <div class="reg-data-hok" id="reg-data-hok">
+        <!-- Team Information -->
+        <label for="hok-Email">Email</label><br />
+        <input type="email" name="hok-Email" required><br />
+  
+        <label for="hok-Team Name">Team Name</label><br />
+        <input type="text" name="hok-Team Name" required><br />
+  
+        <label for="hok-Squad-ID">Squad ID</label><br />
+        <input type="text" name="hok-Squad-ID" required><br />
+  
+        <label for="hok-Captain Name">Captain Name</label><br />
+        <input type="text" name="hok-Captain Name" required><br />
+  
+        <label for="hok-Captain FB Link">Captain Fb Link</label><br />
+        <input type="text" name="hok-Captain FB Link" required><br />
+  
+        <label for="hok-Captain-id">Captain ID</label><br />
+        <input type="text" name="hok-Captain-id" required><br />
+        <br />
+        <h3>Players</h3>
+      <!-- Player 1 Information -->
+        <label for="hok-Player1IGN">Player 1 IGN</label><br />
+        <input type="text" name="hok-Player1IGN" required><br />
+  
+        <label for="hok-Player1ID">Player 1 ID</label><br />
+        <input type="text" name="hok-Player1ID" required><br />
+  
+        <label for="hok-Player1FBLink">Player 1 Fb Link</label><br />
+        <input type="text" name="hok-Player1FBLink" required><br />
+  
+        <br />
+        <!-- Player 2 Information -->
+        <label for="hok-Player2IGN">Player 2 IGN</label><br />
+        <input type="text" name="hok-Player2IGN" required><br />
+  
+        <label for="hok-Player2ID">Player 2 ID</label><br />
+        <input type="text" name="hok-Player2ID" required><br />
+  
+        <label for="hok-Player2FBLink">Player 2 Fb Link</label><br />
+        <input type="text" name="hok-Player2FBLink" required><br />
+  
+        <br />
+        <!-- Player 3 Information -->
+        <label for="hok-Player3IGN">Player 3 IGN</label><br />
+        <input type="text" name="hok-Player3IGN" required><br />
+  
+        <label for="hok-Player3ID">Player 3 ID</label><br />
+        <input type="text" name="hok-Player3ID" required><br />
+  
+        <label for="hok-Player3FBLink">Player 3 Fb Link</label><br />
+        <input type="text" name="hok-Player3FBLink" required><br />
+  
+        <br />
+        <!-- Player 4 Information -->
+        <label for="hok-Player4IGN">Player 4 IGN</label><br />
+        <input type="text" name="hok-Player4IGN" required><br />
+  
+        <label for="hok-Player4ID">Player 4 ID</label><br />
+        <input type="text" name="hok-Player4ID" required><br />
+  
+        <label for="hok-Player4FBLink">Player 4 Fb Link</label><br />
+        <input type="text" name="hok-Player4FBLink" required><br />
+  
+        <br />
+        <!-- Player 5 Information -->
+        <label for="hok-Player5IGN">Player 5 IGN</label><br />
+        <input type="text" name="hok-Player5IGN" required><br />
+  
+        <label for="hok-Player5ID">Player 5 ID</label><br />
+        <input type="text" name="hok-Player5ID" required><br />
+  
+        <label for="hok-Player5FBLink">Player 5 Fb Link</label><br />
+        <input type="text" name="hok-Player5FBLink" required><br />
+  
+  
+        <button id="submitbtnhok" type="submit">Submit</button>
+      </div>
+    </form>
+    
+  </div>
 </body>
 <script type="module" src="hokscript.js"></script>
+<script src="hokbg.js"></script>
 </html>
+
+
