--- a/index.html
+++ b/index.html
@@ -375,12 +375,7 @@
         <div class="product" id="event" data-name="event">
           <div class="swiper-container">
             <div class="swiper-wrapper">
-              <img class="swiper-slide" src="/img/Events/Image 5.jpg" />
-              <img class="swiper-slide" src="/img/Events/Image 2.jpg" />
-              <img class="swiper-slide" src="/img/Events/Image 4.jpg" />
-              <img class="swiper-slide" src="/img/Events/Image 5.jpg" />
-              <img class="swiper-slide" src="/img/Events/Image 2.jpg" />
-              <img class="swiper-slide" src="/img/Events/Image 4.jpg" />
+              
             </div>
           </div>
           <div class="shadow3d"></div>
@@ -564,24 +559,7 @@
           <div class="product hidden" id="registration" data-name="registration">
             <div id="registration-container">
               <div id="registration-details">
-                <h1>Join the Sneaky Valorant 3v3!</h1>
-                <h1>REGISTER NOW❗️❗️❗️</h1>
-                <p>Get ready to battle it out! 🎮 Join the 𝐀𝐏𝐂 𝐆𝐚𝐦𝐢𝐧𝐠 𝐔𝐏𝐒 𝐕𝐚𝐥𝐨𝐫𝐚𝐧𝐭 𝐓𝐨𝐮𝐫𝐧𝐚𝐦𝐞𝐧𝐭 on 𝐒𝐞𝐩𝐭𝐞𝐦𝐛𝐞𝐫 𝟐𝟏, 𝟐𝟎𝟐𝟒 at 𝐒𝐌 𝐌𝐚𝐥𝐥 𝐨𝐟 𝐀𝐬𝐢𝐚. A whole day of epic matches awaits, organized by 𝐒𝐧𝐞𝐚𝐤𝐲 𝐄𝐯𝐞𝐧𝐭𝐬 𝐓𝐞𝐚𝐦.</p>
-                <br>
-                <p>Collegiate and amateur teams are encouraged to join! See you there, agents! </p>
-                <br>
-
-                <p>Register your team NOW!</p>
-                <br>
-
-                <p>How to Register:</p>
-                <p>1. Visit: <a href="https://sneakyeventsteam.com/#products">[www.sneakyeventsteam.com/#products]</a></p>
-                <p>2. Select: "Games you want to register" under "Products"</p>
-                <p>3. Complete the form</p>
                 
-                <p><b>To confirm and verify your slot, please message our Facebook page and send the screenshot of the submitted form. </b></p>
-                <p>Facebook Page : <a href="https://www.facebook.com/SneakyEventsTeam">https://www.facebook.com/SneakyEventsTeam</a></p>
-                <p>Discord Server : <a href="https://discord.gg/k6Xss3D9JS">https://discord.gg/k6Xss3D9JS</a></p>
               </div>
             </div>
           </div>
@@ -723,6 +701,7 @@
     </footer>
     <!--Footer end-->
 </body>
+<script type="module" src="fb.js"></script>
 <script src="script.js"></script>
 <script src="spreadsheet.js"></script>
 
