--- a/p/s/players.html
+++ b/p/s/players.html
@@ -123,10 +123,14 @@
                 <th>Player 2 Riot Id</th>
                 <th>Player 3 Name</th>
                 <th>Player 3 Riot Id</th>
+                <th>Player 4 Name</th>
+                <th>Player 4 Riot Id</th>
+                <th>Player 5 Name</th>
+                <th>Player 5 Riot Id</th>
                 <th>Logo URL</th>
                 <th>Photo of player</th>
                 <th>Profile</th>
-                <th>Fb Page of School</th>
+                <!--<th>Fb Page of School</th>-->
                 <th>Fb Page of Esport Team</th>
               </tr>
             </thead>
