--- a/p/s/reg/valorantreg.html
+++ b/p/s/reg/valorantreg.html
@@ -36,7 +36,7 @@
         <label for="vl-Team Name">Team Name</label></br>
         <input type="text" name="vl-Team Name" placeholder="Team Name" required><br />
   
-        <label for="photoofplayer">Photo of player</label></br>
+        <label for="photoofplayer">Photo of players</label></br>
         <input type="file" id="photoofplayer" name="photoofplayer" accept="image/*" required><br />
   
         <label for="logo2">Logo</label></br>
@@ -67,10 +67,24 @@
         <label for="vl-Player3RiotId" style="display: none;">Player 3 Riot Id</label></br>
         <input type="text" name="vl-Player3RiotId" placeholder="Riot Id" required><br />
 
+        <h5>Player 4</h5>
+        <label for="vl-Player4Name" style="display: none;">Player 4 Name</label></br>
+        <input type="text" name="vl-Player4Name" placeholder="Name" required><br />
+  
+        <label for="vl-Player4RiotId" style="display: none;">Player 4 Riot Id</label></br>
+        <input type="text" name="vl-Player4RiotId" placeholder="Riot Id" required><br />
+
+        <h5>Player 5</h5>
+        <label for="vl-Player5Name" style="display: none;">Player 5 Name</label></br>
+        <input type="text" name="vl-Player5Name" placeholder="Name" required><br />
+  
+        <label for="vl-Player5RiotId" style="display: none;">Player 5 Riot Id</label></br>
+        <input type="text" name="vl-Player5RiotId" placeholder="Riot Id" required><br />
+
         <h3>Other Information</h3>
         <img id="vyseflower1" src="/p/s/s/img/0cd35584b7c20c0e429c6239a52c87f15e546e47.png" alt="image">
-        <label for="vl-fbpageofschool" style="display: none;">Fb Page of School</label></br>
-        <input type="text" name="vl-fbpageofschool" placeholder="Fb Page of School (link*)" required><br />
+        <!-- <label for="vl-fbpageofschool" style="display: none;">Fb Page of School</label></br>
+        <input type="text" name="vl-fbpageofschool" placeholder="Fb Page of School (link*)" required><br /> -->
   
         <label for="vl-fbPageEsportUrl" style="display: none;">Fb Page of Esport Team</label></br>
         <input type="text" name="vl-fbPageEsportUrl" placeholder="Fb Page of Esport Team (link*)" required><br />
