--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
           <span class="item-link-3" id="item-link" data-target="registration">Registration
             <select class="item-link-4" id="item-link-select" data-target="registration1">
               <option value=" ">Select</option>
-              <option value="valorant" disabled>VALORANT</option>
+              <option value="valorant" >VALORANT</option>
               <option value="mlbb">MLBB</option>
               <option value="hok">Honor Of Kings</option>
             </select>
