--- a/index.html
+++ b/index.html
@@ -375,7 +375,16 @@
         <div class="product" id="event" data-name="event">
           <div class="swiper-container">
             <div class="swiper-wrapper">
-              
+              <img class="swiper-slide" src="" />
+              <img class="swiper-slide" src="" />
+              <img class="swiper-slide" src="" />
+              <img class="swiper-slide" src="" />
+              <img class="swiper-slide" src="" />
+              <img class="swiper-slide" src="" />
+              <img class="swiper-slide" src="" />
+              <img class="swiper-slide" src="" />
+              <img class="swiper-slide" src="" />
+              <img class="swiper-slide" src="" />
             </div>
           </div>
           <div class="shadow3d"></div>
