--- a/p/s/admin.html
+++ b/p/s/admin.html
@@ -61,6 +61,7 @@
       <div class="content2 content">
           <div id="image-manager">
               <h2>Image Manager</h2>
+              <h5>10 images was recommended</h5>
               <input type="file" id="image-input" accept="image/*" multiple>
               <button id="image-upload-btn">Upload</button>
               <button id="image-delete-btn" disabled title="Must select at least one image">Delete Selected</button>
