--- a/p/s/admin.html
+++ b/p/s/admin.html
@@ -20,7 +20,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css">
   <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://apis.google.com/js/api.js"></script>
   <!--  Plugins  -->
 
 </head>
@@ -44,6 +45,10 @@
         <button class="toggle-button" id="showContent1">Show Registration Details</button>
         <button class="toggle-button" id="showContent2">Show Image Manager</button>
         <button class="toggle-button" id="showContent3">Open Registration Manager</button>
+      </div>
+
+      <div>
+        <canvas id="analyticsChart" width="400" height="200"></canvas>
       </div>
 
       <div class="maincontent">
@@ -212,5 +217,104 @@
   }
 
 
+</script>
+
+
+<script>
+  // Load the Google API client
+  function loadClient() {
+      gapi.load('client:auth2', initClient);
+  }
+
+  // Initialize the Google API client
+  function initClient() {
+      gapi.client.init({
+          apiKey: 'AIzaSyBXl_8lIBbJwF7ePmlgzfiISUAjGnIf6Jc',
+          clientId: '20694707362-fbn0pagm69eaq492dotkftv1t7ng81d5.apps.googleusercontent.com',
+          discoveryDocs: ['https://analyticsreporting.googleapis.com/$discovery/rest?version=v4'],
+          scope: 'https://www.googleapis.com/auth/analytics.readonly'
+      }).then(function () {
+          // Get the data once authorized
+          gapi.auth2.getAuthInstance().signIn().then(getAnalyticsData);
+      });
+  }
+
+  // Fetch data for visits, popularity, and Google searches
+  function getAnalyticsData() {
+      gapi.client.analyticsreporting.reports.batchGet({
+          reportRequests: [
+              {
+                  viewId: '327338303',
+                  dateRanges: [
+                      {
+                          startDate: '30daysAgo',
+                          endDate: 'today'
+                      }
+                  ],
+                  metrics: [
+                      { expression: 'ga:users' },          // Visited (users count)
+                      { expression: 'ga:pageviews' },      // Popularity (pageviews)
+                      { expression: 'ga:searchUniques' }   // Google searches (unique searches)
+                  ],
+                  dimensions: [
+                      { name: 'ga:date' }  // Group by date
+                  ]
+              }
+          ]
+      }).then(function (response) {
+          const result = response.result.reports[0].data.rows;
+
+          const labels = result.map(row => row.dimensions[0]);        // Date labels
+          const visitedData = result.map(row => row.metrics[0].values[0]);   // Users (Visited)
+          const popularityData = result.map(row => row.metrics[0].values[1]);  // Pageviews (Popularity)
+          const searchesData = result.map(row => row.metrics[0].values[2]);   // Unique searches (Google searches)
+
+          renderChart(labels, visitedData, popularityData, searchesData);
+      });
+  }
+
+  // Render the chart with Chart.js
+  function renderChart(labels, visitedData, popularityData, searchesData) {
+      const ctx = document.getElementById('analyticsChart').getContext('2d');
+      new Chart(ctx, {
+          type: 'line',
+          data: {
+              labels: labels,
+              datasets: [
+                  {
+                      label: 'Visited',
+                      data: visitedData,
+                      backgroundColor: 'rgba(54, 162, 235, 0.2)',
+                      borderColor: 'rgba(54, 162, 235, 1)',
+                      borderWidth: 1
+                  },
+                  {
+                      label: 'Popularity (Pageviews)',
+                      data: popularityData,
+                      backgroundColor: 'rgba(255, 206, 86, 0.2)',
+                      borderColor: 'rgba(255, 206, 86, 1)',
+                      borderWidth: 1
+                  },
+                  {
+                      label: 'Google Searches',
+                      data: searchesData,
+                      backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                      borderColor: 'rgba(75, 192, 192, 1)',
+                      borderWidth: 1
+                  }
+              ]
+          },
+          options: {
+              scales: {
+                  y: {
+                      beginAtZero: true
+                  }
+              }
+          }
+      });
+  }
+
+  // Load the client when the page is loaded
+  gapi.load('client', loadClient);
 </script>
 </html>
