--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="a93694c2-f46a-42cb-8ee1-ddc9554734c7" data-blockingmode="auto" type="text/javascript"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G7HLQBNCR2"></script>
 </head>
 
 <style>
@@ -732,6 +733,13 @@
 
 
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-G7HLQBNCR2');
+</script>
 <script>
   var swiper = new Swiper('.swiper-container', {
     slidesPerView: 3,
