--- a/p/s/admin.html
+++ b/p/s/admin.html
@@ -20,8 +20,22 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css">
   <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-G7HLQBNCR2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-G7HLQBNCR2');
+  </script>
+  <!-- Google Identity Services for Sign-In -->
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
+  <!-- Load Google API client library -->
+  <script src="https://apis.google.com/js/api.js" async defer></script>
+
+
+  <!-- Chart.js for rendering the chart -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="https://apis.google.com/js/api.js"></script>
   <!--  Plugins  -->
 
 </head>
@@ -48,7 +62,26 @@
       </div>
 
       <div>
+
+        <h1>Website Analytics (GA4)</h1>
+
+        <!-- Google Sign-In button -->
+        <div id="g_id_onload"
+            data-client_id="20694707362-fbn0pagm69eaq492dotkftv1t7ng81d5.apps.googleusercontent.com"
+            data-callback="handleCredentialResponse"
+            data-auto_prompt="false">
+        </div>
+        <div class="g_id_signin"
+            data-type="standard"
+            data-shape="rectangular"
+            data-theme="outline"
+            data-text="sign_in_with"
+            data-size="large">
+        </div>
+
+        <!-- Canvas for displaying the chart -->
         <canvas id="analyticsChart" width="400" height="200"></canvas>
+        
       </div>
 
       <div class="maincontent">
@@ -221,59 +254,48 @@
 
 
 <script>
-  // Load the Google API client
-  function loadClient() {
-      gapi.load('client:auth2', initClient);
+  // Step 1: Handle the credential response from GIS
+  function handleCredentialResponse(response) {
+      console.log("Encoded JWT ID token: " + response.credential);
+      
+      // Initialize Google API client once the user is authenticated
+      gapi.load('client', initializeAnalyticsAPI);
   }
 
-  // Initialize the Google API client
-  function initClient() {
+  // Step 2: Initialize the Google API client for GA4 Data API
+  function initializeAnalyticsAPI() {
       gapi.client.init({
-          apiKey: 'AIzaSyBXl_8lIBbJwF7ePmlgzfiISUAjGnIf6Jc',
-          clientId: '20694707362-fbn0pagm69eaq492dotkftv1t7ng81d5.apps.googleusercontent.com',
-          discoveryDocs: ['https://analyticsreporting.googleapis.com/$discovery/rest?version=v4'],
-          scope: 'https://www.googleapis.com/auth/analytics.readonly'
+          apiKey: 'AIzaSyBXl_8lIBbJwF7ePmlgzfiISUAjGnIf6Jc', // Your API Key
+          discoveryDocs: ['https://analyticsdata.googleapis.com/$discovery/rest?version=v1'] // GA4 Data API Discovery Doc
       }).then(function () {
-          // Get the data once authorized
-          gapi.auth2.getAuthInstance().signIn().then(getAnalyticsData);
+          getAnalyticsData(); // Fetch the GA4 Analytics data
       });
   }
 
-  // Fetch data for visits, popularity, and Google searches
+  // Step 3: Fetch data from GA4 Data API (visits, pageviews, and searches)
   function getAnalyticsData() {
-      gapi.client.analyticsreporting.reports.batchGet({
-          reportRequests: [
-              {
-                  viewId: '327338303',
-                  dateRanges: [
-                      {
-                          startDate: '30daysAgo',
-                          endDate: 'today'
-                      }
-                  ],
-                  metrics: [
-                      { expression: 'ga:users' },          // Visited (users count)
-                      { expression: 'ga:pageviews' },      // Popularity (pageviews)
-                      { expression: 'ga:searchUniques' }   // Google searches (unique searches)
-                  ],
-                  dimensions: [
-                      { name: 'ga:date' }  // Group by date
-                  ]
-              }
-          ]
+      gapi.client.analyticsdata.properties.runReport({
+          property: 'properties/464501130', // Replace with your GA4 property ID (not Stream ID)
+          dateRanges: [{ startDate: '30daysAgo', endDate: 'today' }],
+          metrics: [
+              { name: 'activeUsers' },     // Users count (visited)
+              { name: 'screenPageViews' }, // Pageviews (popularity)
+              { name: 'searchUniques' }    // Unique searches (if applicable)
+          ],
+          dimensions: [{ name: 'date' }] // Group by date
       }).then(function (response) {
-          const result = response.result.reports[0].data.rows;
+          const rows = response.result.rows;
 
-          const labels = result.map(row => row.dimensions[0]);        // Date labels
-          const visitedData = result.map(row => row.metrics[0].values[0]);   // Users (Visited)
-          const popularityData = result.map(row => row.metrics[0].values[1]);  // Pageviews (Popularity)
-          const searchesData = result.map(row => row.metrics[0].values[2]);   // Unique searches (Google searches)
+          const labels = rows.map(row => row.dimensionValues[0].value);  // Date labels
+          const visitedData = rows.map(row => row.metricValues[0].value); // Users (Visited)
+          const popularityData = rows.map(row => row.metricValues[1].value); // Pageviews (Popularity)
+          const searchesData = rows.map(row => row.metricValues[2].value); // Unique searches (if applicable)
 
           renderChart(labels, visitedData, popularityData, searchesData);
       });
   }
 
-  // Render the chart with Chart.js
+  // Step 4: Render the chart with Chart.js
   function renderChart(labels, visitedData, popularityData, searchesData) {
       const ctx = document.getElementById('analyticsChart').getContext('2d');
       new Chart(ctx, {
@@ -313,8 +335,5 @@
           }
       });
   }
-
-  // Load the client when the page is loaded
-  gapi.load('client', loadClient);
 </script>
 </html>
