--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       }
     }
     </script>  
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="a93694c2-f46a-42cb-8ee1-ddc9554734c7"  type="text/javascript"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Sneaky Events Team</title>
@@ -40,7 +41,7 @@
     />
 
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="a93694c2-f46a-42cb-8ee1-ddc9554734c7" data-blockingmode="auto" type="text/javascript"></script>
+    
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-G7HLQBNCR2"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
