--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     />
 
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-    
+    <script data-cookieconsent="ignore">    window.dataLayer = window.dataLayer || [];    function gtag() {        dataLayer.push(arguments);    }    gtag("consent", "default", {        ad_personalization: "denied",        ad_storage: "denied",        ad_user_data: "denied",        analytics_storage: "denied",        functionality_storage: "denied",        personalization_storage: "denied",        security_storage: "granted",        wait_for_update: 500,    });    gtag("set", "ads_data_redaction", true);    gtag("set", "url_passthrough", false);</script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-G7HLQBNCR2"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
