--- a/p/s/admin.html
+++ b/p/s/admin.html
@@ -249,7 +249,7 @@
 
   function getAnalyticsData() {
     gapi.client.analyticsdata.properties.runReport({
-      "property": "properties/YOUR_PROPERTY_ID",
+      "property": "properties/464591648",
       "dimensions": [
         {
           "name": "date"
