--- a/p/s/admin.html
+++ b/p/s/admin.html
@@ -20,18 +20,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css">
   <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-688N7E9KNT"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-688N7E9KNT');
-  </script>
   <!-- Load Google Identity Services for Sign-In -->
   <script src="https://apis.google.com/js/api.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
 
 
   <!--  Plugins  -->
@@ -64,7 +56,7 @@
           <div id="auth-button"></div>
           <div id="view-selector"></div>
           <div id="chart-container"></div>
-
+          <button id="authorize_button">Authorize</button>
         
       </div>
 
@@ -236,19 +228,58 @@
 <script src="https://apis.google.com/js/api.js"></script>
 
 <script>
-  function initClient() {
-    gapi.client.init({
-      'apiKey': 'AIzaSyBXl_8lIBbJwF7ePmlgzfiISUAjGnIf6Jc',
-      'clientId': '20694707362-fbn0pagm69eaq492dotkftv1t7ng81d5.apps.googleusercontent.com',
-      'discoveryDocs': ['https://analyticsdata.googleapis.com/$discovery/rest?version=v1alpha'],
-      'scope': 'https://www.googleapis.com/auth/analytics.readonly',
-    }).then(function () {
-      return gapi.auth2.getAuthInstance().signIn();
-    }).then(getAnalyticsData);
+  let tokenClient;
+  let gapiInited = false;
+  let gisInited = false;
+
+  function gapiLoaded() {
+    gapi.load('client', initializeGapiClient);
   }
 
-  function getAnalyticsData() {
-    gapi.client.analyticsdata.properties.runReport({
+  async function initializeGapiClient() {
+    await gapi.client.init({
+      apiKey: 'AIzaSyBXl_8lIBbJwF7ePmlgzfiISUAjGnIf6Jc',
+      discoveryDocs: ['https://analyticsdata.googleapis.com/$discovery/rest?version=v1alpha'],
+    });
+    gapiInited = true;
+    maybeEnableButtons();
+  }
+
+  function gisLoaded() {
+    tokenClient = google.accounts.oauth2.initTokenClient({
+      client_id: '20694707362-fbn0pagm69eaq492dotkftv1t7ng81d5.apps.googleusercontent.com',
+      scope: 'https://www.googleapis.com/auth/analytics.readonly',
+      callback: '',  // Will be filled in later
+    });
+    gisInited = true;
+    maybeEnableButtons();
+  }
+
+  function maybeEnableButtons() {
+    if (gapiInited && gisInited) {
+      document.getElementById("authorize_button").style.display = "block";
+    }
+  }
+
+  function handleAuthClick() {
+    tokenClient.callback = async (resp) => {
+      if (resp.error !== undefined) {
+        throw (resp);
+      }
+      getAnalyticsData();  // Now authorized to call APIs
+    };
+
+    if (gapi.client.getToken() === null) {
+      // Prompt the user to select an account
+      tokenClient.requestAccessToken({prompt: 'consent'});
+    } else {
+      // Skip account selection prompt
+      tokenClient.requestAccessToken({prompt: ''});
+    }
+  }
+
+  async function getAnalyticsData() {
+    let response = await gapi.client.analyticsdata.properties.runReport({
       "property": "properties/464591648",
       "dimensions": [
         {
@@ -266,58 +297,19 @@
           "endDate": "today"
         }
       ]
-    }).then(function (response) {
-      console.log(response.result);
-      // Display data on your page
-    }, function (error) {
-      console.log('Error: ' + error);
     });
+    console.log(response.result);
+    // Display data on your page
   }
 
-  gapi.load('client:auth2', initClient);
+  document.getElementById("authorize_button").addEventListener("click", handleAuthClick);
 </script>
 
 
 
-<script>
-  (function(w,d,s,g,js,fs){
-    g=w.gapi||(w.gapi={});g.analytics={q:[],ready:function(f){this.q.push(f)}};
-    js=d.createElement(s);fs=d.getElementsByTagName(s)[0];
-    js.src='https://apis.google.com/js/platform.js';
-    fs.parentNode.insertBefore(js,fs);js.onload=function(){g.load('analytics')};
-  }(window,document,'script'));
+<script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
+<script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
 
-  gapi.analytics.ready(function() {
-    gapi.analytics.auth.authorize({
-      container: 'auth-button',
-      clientid: 'YOUR_CLIENT_ID.apps.googleusercontent.com',
-    });
 
-    var viewSelector = new gapi.analytics.ext.ViewSelector({
-      container: 'view-selector'
-    });
 
-    var chart = new gapi.analytics.googleCharts.DataChart({
-      query: {
-        metrics: 'ga:sessions',
-        dimensions: 'ga:date',
-        'start-date': '30daysAgo',
-        'end-date': 'yesterday',
-      },
-      chart: {
-        container: 'chart-container',
-        type: 'LINE',
-        options: {
-          width: '100%'
-        }
-      }
-    });
-
-    viewSelector.on('change', function(ids) {
-      chart.set({query: {ids: ids}}).execute();
-    });
-
-    viewSelector.execute();
-  });
-</script>
 </html>
