--- a/p/s/admin.html
+++ b/p/s/admin.html
@@ -56,7 +56,7 @@
           <div id="auth-button"></div>
           <div id="view-selector"></div>
           <div id="chart-container"></div>
-          <button id="authorize_button">Authorize</button>
+          <button id="authorize_button" style="display: none;">Authorize</button>
         
       </div>
 
@@ -238,8 +238,8 @@
 
   async function initializeGapiClient() {
     await gapi.client.init({
-      apiKey: 'AIzaSyBXl_8lIBbJwF7ePmlgzfiISUAjGnIf6Jc',
-      discoveryDocs: ['https://analyticsdata.googleapis.com/$discovery/rest?version=v1alpha'],
+      apiKey: 'AIzaSyBXl_8lIBbJwF7ePmlgzfiISUAjGnIf6Jc', // Use your actual API key
+      discoveryDocs: ['https://analyticsdata.googleapis.com/$discovery/rest?version=v1'], // Corrected discovery document version
     });
     gapiInited = true;
     maybeEnableButtons();
@@ -247,7 +247,7 @@
 
   function gisLoaded() {
     tokenClient = google.accounts.oauth2.initTokenClient({
-      client_id: '20694707362-fbn0pagm69eaq492dotkftv1t7ng81d5.apps.googleusercontent.com',
+      client_id: '20694707362-fbn0pagm69eaq492dotkftv1t7ng81d5.apps.googleusercontent.com', // Use your actual client ID
       scope: 'https://www.googleapis.com/auth/analytics.readonly',
       callback: '',  // Will be filled in later
     });
@@ -279,36 +279,39 @@
   }
 
   async function getAnalyticsData() {
-    let response = await gapi.client.analyticsdata.properties.runReport({
-      "property": "properties/464591648",
-      "dimensions": [
-        {
-          "name": "date"
-        }
-      ],
-      "metrics": [
-        {
-          "name": "activeUsers"
-        }
-      ],
-      "dateRanges": [
-        {
-          "startDate": "7daysAgo",
-          "endDate": "today"
-        }
-      ]
-    });
-    console.log(response.result);
-    // Display data on your page
+    try {
+      let response = await gapi.client.analyticsdata.properties.runReport({
+        "property": "properties/464591648", // Replace with your actual property ID
+        "dimensions": [
+          {
+            "name": "date"
+          }
+        ],
+        "metrics": [
+          {
+            "name": "activeUsers"
+          }
+        ],
+        "dateRanges": [
+          {
+            "startDate": "7daysAgo",
+            "endDate": "today"
+          }
+        ]
+      });
+      console.log(response.result);
+      // Handle/display the data on your page, e.g., console.log or inserting into DOM
+    } catch (err) {
+      console.error("Error running report: ", err);
+    }
   }
 
   document.getElementById("authorize_button").addEventListener("click", handleAuthClick);
 </script>
 
-
-
 <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
 <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
+
 
 
 
