Changes hok images upload

--- a/p/s/reg/hokreg.html
+++ b/p/s/reg/hokreg.html
@@ -46,6 +46,15 @@
         <label for="hok-Captain-id">Captain ID</label><br />
         <input type="text" name="hok-Captain-id" required><br />
         <br />
+        <label for="hok-logo">Logo</label><br />
+        <input type="file" accept="image/*" name="hok-logo" required><br />
+        <br />
+        <label for="hok-photo-player">Photo of Players</label><br />
+        <input type="file" accept="image/*" name="hok-photo-player" required><br />
+        <br />
+        <label for="hok-fee">Registration Fee</label><br />
+        <input type="file" accept="image/*" name="hok-fee" required><br />
+        <br />
         <h3>Players</h3>
       <!-- Player 1 Information -->
         <label for="hok-Player1IGN">Player 1 IGN</label><br />
